--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,13 @@
         "maxEOF": 1
       }
     ],
-    "object-curly-newline": 0
+    "object-curly-newline": 0,
+    "tailwindcss/no-custom-classname": [
+      "warn",
+      {
+        "config": "tailwind.config.js",
+        "whitelist": ["text-gray"]
+      }
+    ]
   }
 }
