--- a/package.json
+++ b/package.json
@@ -11,11 +11,7 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-config-standard": "^17.1.0",
-    "eslint-plugin-tailwindcss": "^3.15.1",
     "gsap": "^3.12.5",
-    "prettier": "^3.2.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -25,10 +21,15 @@
     "@vitejs/plugin-react": "^4.2.1",
     "autoprefixer": "^10.4.18",
     "eslint": "^8.57.0",
+    "eslint-config-prettier": "^9.1.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-react": "^7.34.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
+    "eslint-plugin-tailwindcss": "^3.15.1",
     "postcss": "^8.4.36",
+    "prettier": "^3.2.5",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.6"
   }
