--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -22,5 +22,24 @@
         "whitelist": ["text-gray"]
       }
     ]
-  }
+  },
+  "import/order": [
+    "error",
+    {
+      "groups": ["builtin", "external", "internal"],
+      "pathGroups": [
+        {
+          "pattern": "react",
+          "group": "external",
+          "position": "before"
+        }
+      ],
+      "pathGroupsExcludedImportTypes": ["react"],
+      "newlines-between": "always",
+      "alphabetize": {
+        "order": "asc",
+        "caseInsensitive": true
+      }
+    }
+  ]
 }
