zinc color added to eslintrc

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -19,7 +19,7 @@
       "warn",
       {
         "config": "tailwind.config.js",
-        "whitelist": ["text-gray"]
+        "whitelist": ["text-gray", "bg-zinc"]
       }
     ],
 
