--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   },
   "dependencies": {
     "@gsap/react": "^2.1.0",
+    "@react-three/drei": "^9.102.6",
     "gsap": "^3.12.5",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "three": "^0.162.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.64",
