--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "three": "^0.162.0"
   },
   "devDependencies": {
+    "@react-three/eslint-plugin": "^0.1.1",
     "@types/react": "^18.2.64",
     "@types/react-dom": "^18.2.21",
     "@vitejs/plugin-react": "^4.2.1",
